--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,6 +6,18 @@
   flex: 1 1 auto;
 }
 
+.table-row:nth-child(2n + 1) {
+  background-color: rgba(0,0,0,.05);
+}
+
+.table-row button {
+  margin: 1px 5px;
+}
+
+.table-row button .fa {
+  height: 17.5px;
+}
+
 .flex-grid {
   display: flex !important;
 }
@@ -47,7 +59,7 @@
 }
 
 .mat-list-text {
-    text-align: center;
+  text-align: center;
 }
 
 .table-row {
@@ -64,18 +76,14 @@
 }
 
 .text {
-  width: 280px;
+  word-break: break-all;
+  width: 20%;
 }
 
 body {
   font-size: 20px;
 }
 
-.table-row {
-  border-bottom: 2px solid #e0e0e0;
-  border-collapse: collapse;
-  padding-top: 5px;
-}
 .table-row.header {
   background-color: #FFEEDB;
   font-weight: bold;
