--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,30 +3,27 @@
   <mat-toolbar color="primary">
     <span>My Libray</span>
     <span class="fill-remaining-space"></span>
-    <button mat-raised-button (click)="openDialog()">add book</button>
+    <button mat-raised-button (click)="openDialog()"><i class="fa fa-plus"></i> Add book</button>
   </mat-toolbar>
 </div>
 
 <div class="container-fluid" style="margin-top: 10px">
-    <div class="table-row header">
-      <div class="text">Book ID</div>
-      <div class="text">Book Title</div>
-      <div class="text">Author</div>
-      <div class="text">Published Date</div>
-      <div class="col-3"></div>
-    </div>
-  
-    <div class="table-row" *ngFor="let book of books">
-      <div class="text">{{book._id}}</div>
-      <div class="text">{{book.BookTitle | capitalize}}</div>
-      <div class="text" title="vasan@example.com">{{book.AuthorName}}</div>
-      <div class="text">{{book.PublishedDate}}</div>
-      <div class="col-3">
-          <button mat-flat-button (click)="openDialog(book)"><i class="fa fa-pen"></i> Edit</button>
-          <button mat-flat-button (click)="openDeleteDialog(book._id)"><i class="fa fa-trash-alt"></i> Delete</button>
-        </div>
-        <mat-divider></mat-divider>
-    </div>   
+  <div class="table-row header">
+    <div class="text">Book ID</div>
+    <div class="text">Book Title</div>
+    <div class="text">Author</div>
+    <div class="text">Published Date</div>
+    <div class="text"></div>
   </div>
 
-
+  <div class="table-row" *ngFor="let book of books">
+    <div class="text">{{book._id}}</div>
+    <div class="text">{{book.BookTitle | capitalize}}</div>
+    <div class="text" title="vasan@example.com">{{book.AuthorName}}</div>
+    <div class="text">{{book.PublishedDate}}</div>
+    <div class="text">
+      <button mat-flat-button (click)="openDialog(book)"><i class="fa fa-pencil fa-fw"></i> Edit</button>
+      <button mat-flat-button color="accent" (click)="openDeleteDialog(book._id)"><i class="fa fa-trash fa-fw"></i> Delete</button>
+    </div>
+  </div>   
+</div>
