--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -85,7 +85,7 @@ body {
 }
 
 .table-row.header {
-  background-color: #FFEEDB;
+  background-color: #ffeedb;
   font-weight: bold;
   padding-top: 8px;
   padding-bottom: 8px;
