--- a/src/app/new-book/new-book.component.html
+++ b/src/app/new-book/new-book.component.html
@@ -2,19 +2,19 @@
   <mat-dialog-content [formGroup]="form">
     <mat-form-field class="form-field">
       <input type="text" matInput required placeholder="Title" formControlName="bookTitle" />
-      <mat-error *ngIf="bookTitle.invalid && (bookTitle.dirty || bookTitle.touched)">
+      <mat-error class="form-field-error" *ngIf="bookTitle.invalid && (bookTitle.dirty || bookTitle.touched)">
         Book title is required
       </mat-error>
     </mat-form-field>
     <mat-form-field class="form-field">
       <input type="text" matInput required placeholder="Author" formControlName="authorName">
-      <mat-error *ngIf="authorName.invalid && (authorName.dirty || authorName.touched)" class="alert alert-danger">
+      <mat-error class="form-field-error" *ngIf="authorName.invalid && (authorName.dirty || authorName.touched)" class="alert alert-danger">
         Author name is required
       </mat-error>
     </mat-form-field>
     <mat-form-field class="form-field">
       <input type="date" matInput required placeholder="Published Date" formControlName="publishedDate">
-      <mat-error *ngIf="publishedDate.invalid && (publishedDate.dirty || publishedDate.touched)" class="alert alert-danger">
+      <mat-error class="form-field-error" *ngIf="publishedDate.invalid && (publishedDate.dirty || publishedDate.touched)" class="alert alert-danger">
         Published date is required
       </mat-error>
     </mat-form-field>
